a lot of changes